--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-10 16:31:50
+lastsearch = 2024-08-10 17:28:43
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,14 +12,14 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
-match = 0.0%%
-title = Chiếu đèn vàng da 15 phút có hiệu quả không?
-url = https://www.vinmec.com/vie/bai-viet/chieu-den-vang-da-15-phut-co-hieu-qua-khong-vi
+match = -21.4%%
+title = Làm thế nào khi trẻ sơ sinh bị vàng da kéo dài?
+url = https://www.vinmec.com/vie/bai-viet/lam-nao-khi-tre-so-sinh-bi-vang-da-keo-dai-vi
 
 [www.hotdeal.vn]
-match = -25.0%%
-title = ĐIỀU TRỊ MỤN LƯNG/ THÂM NÁCH/ MÔNG/ BẸN/ LĂN ...
-url = https://www.hotdeal.vn/ho-chi-minh/dieu-tri-mun-tham-nam/dieu-tri-mun-lung-tham-nach-mong-ben-lan-kim-sieu-vi-diem-tri-seo-ro-nam-tan-nhang-phi-kim-tao-bien-cam-ket-hieu-qua-100-mimosa-spa-359573.html
+match = -50.0%%
+title = Cấy Tảo Xoắn/ Hồng Sâm/ Ủ Trắng Mặt/ Lăn Kim Siêu Vi ...
+url = https://www.hotdeal.vn/ho-chi-minh/cham-soc-da-mat/cay-tao-xoan-hong-sam-u-trang-mat-lan-kim-sieu-vi-diem-tri-seo-ro-nam-tan-nhang-cam-ket-hieu-qua-100-he-thong-madina-beauty-academy-5-361607.html
 
 [www.youtube.com]
 match = -35.7%%
@@ -27,9 +27,9 @@ title = QUỲ LẠY Trước Cô Gái Người Đài Loan Vừa "HÁT CÂU ĐẦ
 url = https://www.youtube.com/watch?v=hpMYEpipPao
 
 [m.facebook.com]
-match = 0.0%%
-title = Chợ Mua Bán Bù Đốp
-url = https://m.facebook.com/groups/625079281427355/permalink/1551560102112597/
+match = -42.9%%
+title = Fruitarian ( Raw Vegan ) | BÍ QUYẾT CHỮA CẬN THỊ ...
+url = https://m.facebook.com/groups/langantho/posts/948797575843252/
 
 [www.dkn.tv]
 match = -21.4%%
