--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-10 13:58:44
+lastsearch = 2024-08-10 17:22:24
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -67,9 +67,9 @@ title = Đèn chiếu sáng HT MAX LIGHT
 url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang
 
 [www.lazada.vn]
-match = -246.7%%
-title = Đèn led âm trần siêu mỏng HT Light Level tròn, công suất ...
-url = https://www.lazada.vn/products/den-led-am-tran-sieu-mong-ht-light-level-tron-cong-suat-15w-2-loai-anh-sang-trang-vang-hang-chinh-hang-i1620479452.html
+match = -200.0%%
+title = Hộp Phân Phối Điện Chiếu Sáng Gia Dụng 5/8/12/15/18/ ...
+url = https://www.lazada.vn/products/hop-phan-phoi-dien-chieu-sang-gia-dung-5812151824-cach-ht-series-hop-day-noi-chong-tham-nuoc-i1491178233.html
 
 [www.boa.gov.vn]
 match = -146.7%%
