--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-08-10 16:37:20
+lastsearch = 2024-08-10 17:31:11
 
 [shopee.vn]
 match = -37.5%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 [demxanh.com]
 match = -25.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOopL26qUL8Ey2IFdBmlwBOjQfA8G6zKXC5xLH2rr4H5CQZr2DURe
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [goni.vn]
 match = 4.2%%
@@ -39,7 +39,7 @@ url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
 [sieuthidem.vn]
 match = 16.7%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOordcWdgqPJVuOxGOCEPiuitNTbnvl6jEO1L_jsl7A7vVr_vOo_S
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [cungnhaulamgiau.vn]
 match = 4.2%%
