--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-10 16:27:53
+lastsearch = 2024-08-10 17:19:56
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -218.8%%
-title = "Chết rồi sẽ đi về đâu?" Thầy giải thích RẤT HAY nghe xong ...
-url = https://www.youtube.com/watch?v=0GAlh_VjR48
+match = -162.5%%
+title = Mẹo Hay Luộc Đậu Phộng Nhanh Mềm Không Thâm Đen ...
+url = https://www.youtube.com/watch?v=vVLK7BEIS-g
 
 [tuyensinh247.com]
 match = -225.0%%
