--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-08-10 11:20:45
+lastsearch = 2024-08-10 17:15:27
 
 [thegioidemviet.vn]
 match = 32.1%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/chieu-truc-p17.html
 [demxanh.com]
 match = -28.6%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOopg27InWbY1YGTlZL9B1GAdINcXGSRn-STldYoHh8wLp9djaeQ2
+url = https://demxanh.com/chieu-truc.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = Chiếu trúc Quế Lâm loại 1 cao cấp ( loại có 2 mắt ngọc)
 url = https://www.sendo.vn/anh-that-100-chieu-truc-que-lam-loai-1-cao-cap-loai-co-2-mat-ngoc-duo-c-kie-m-ha-ng-42210887-117572298.html
 
 [www.lazada.vn]
-match = 3.6%%
-title = Chiếu trúc hạt Quế Lâm loại 1, chiếu điều hoà cao cấp
-url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html?srsltid=AfmBOops4zguvgY7OJXJ5hrJI3SP90LI7j562TBC_6XdakB-V0DuSXLK
+match = 35.7%%
+title = Chiếu trúc hạt vàng loại tốt-quế lâm 1
+url = https://www.lazada.vn/products/chieu-truc-hat-vang-loai-tot-que-lam-1-i1312554042.html
 
 [thegioidemonline.com]
 match = -39.3%%
@@ -72,8 +72,8 @@ title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
 url = https://www.youtube.com/watch?v=8i3SOv4E4eo
 
 [sieuthinguyenkim.com]
-match = -10.7%%
-title = Chiếu Quế lâm - Siêu Thị Điện Máy Nguyễn Kim
+match = -35.7%%
+title = Chiếu Quế lâm - Chiếu | Siêu thị điện máy Nguyễn Kim
 url = https://sieuthinguyenkim.com/chieu-que-lam-nsh4041837720.html
 
 [caobanggreen.vn]
