--- a/images/nem-foam-dreamland-uc-200x220x20/config.ini
+++ b/images/nem-foam-dreamland-uc-200x220x20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-200x220x20.html
 lastopen = 2024-06-07 00:49:31
 
 [search]
-lastsearch = 2024-08-10 16:17:02
+lastsearch = 2024-08-10 17:29:25
 
 [www.diepxuan.com]
 match = 31.2%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOorD697u6LCa8YLMlv_TuTs9y3dSCIOEH0D3SeIvKJy_7L73wfG5
 
 [dreamfoambedding.com]
 match = -13.0%%
