--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-08-10 11:19:44
+lastsearch = 2024-08-10 17:23:06
 
 [changagoidemtamhao.com]
 match = -10.0%%
@@ -19,7 +19,7 @@ url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.htm
 [demxanh.com]
 match = -75.0%%
 title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 16
-url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-16.html?srsltid=AfmBOorMBnWa75Wfj2ArhNKhVEH-uCoBIZTFQugxKKpAFddprs7hV3ax
+url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-16.html
 
 [www.facebook.com]
 match = -75.0%%
@@ -29,7 +29,7 @@ url = https://www.facebook.com/vuanem.vn/posts/-sở-hữu-bộ-chăn-ga-gấm-c
 [shopee.vn]
 match = -70.0%%
 title = bộ chăn ga pyeoda gấm sần giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=bộ chăn ga pyeoda gấm sần&urlold=bo-chan-ga-goi-gam-vip-pyeoda/741954123374297332/3385656584626545253/ 
+url = https://shopee.vn/search?keyword=bộ chăn ga pyeoda gấm sần&urlold=bo-chan-ga-goi-gam-vip-pyeoda/741954123374297332/3385656584626545253/
 
 [tchome.vn]
 match = -10.0%%
