--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-08-10 16:22:32
+lastsearch = 2024-08-10 17:22:02
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -14,7 +14,7 @@ url = https://www.thanhthuyhanh.com/products/ruot-goi-nam-dream-zone
 [ninhouse.vn]
 match = -171.4%%
 title = Ruột gối nằm giá rẻ NIN House chính hãng tại Tphcm
-url = https://ninhouse.vn/collections/ruot-goi-1
+url = https://ninhouse.vn/collections/ruot-goi-1?srsltid=AfmBOopo-fDGh05AGSVlpCIi6EC9GJMZbC8jz7ojwvP3ihvM0MgKp-in
 
 [elambo.vn]
 match = -142.9%%
@@ -34,7 +34,7 @@ url = https://changagoidemsonghong.online/ruot-chan-ruot-goi-song-hong.html
 [demxanh.com]
 match = -150.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html
+url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOornbfnuxy6ALfdQX9l7R9NTOHtnXYocPKucPkTMWXk2g2fdDBg2
 
 [www.diepxuan.com]
 match = -100.0%%
@@ -59,12 +59,12 @@ url = https://songhonghanoi.vn/bang-gia-vo-goi-ruot-goi-song-hong-moi-nhat-2021.
 [jysk.vn]
 match = -164.3%%
 title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/ruot-chan-goi
+url = https://jysk.vn/ruot-chan-goi?srsltid=AfmBOop9fe3V_dqbt-iGWXDrUSRyfBrhWcFhVJJxoA21EP9iFQFDTyNZ
 
 [everonvn.com.vn]
 match = -164.3%%
 title = Bảng Giá Ruột Gối Đầu Everon Chính Hãng Hàn Quốc
-url = https://everonvn.com.vn/5/ruot-goi-everon
+url = https://everonvn.com.vn/5/ruot-goi-everon?srsltid=AfmBOor2XM3RGIZAYkcDrXtYksoSD7L7l-f7sRnMHueSTn-uo4QA5vbY
 
 [demsonghonghanoi.com]
 match = -235.7%%
@@ -89,7 +89,7 @@ url = https://tiki.vn/ruot-goi-ruot-chan/c6724
 [ru9.vn]
 match = -171.4%%
 title = Kinh Nghiệm Nên Mua Ruột Gối Loại Nào Để Ngủ Ngon
-url = https://ru9.vn/blogs/magazine/nen-mua-ruot-goi-loai-nao
+url = https://ru9.vn/blogs/magazine/nen-mua-ruot-goi-loai-nao?srsltid=AfmBOoqSnSpkEa5Uq-uwausLSbV125A6Vbm0yzqytA1CZA-peKOlxzGB
 
 [www.nguonhangsigiare.com.vn]
 match = -235.7%%
