--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-10 16:31:29
+lastsearch = 2024-08-10 17:27:22
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = 10.0%%
+title = Anti-Korean sentiment
+url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -522,9 +522,9 @@ title = 'Big Brother' Sneak Peek: Kimo Tells Tucker a Key Secret ...
 url = https://www.mycouriertribune.com/lifestyles/entertainment/big-brother-sneak-peek-kimo-tells-tucker-a-key-secret-video/article_1617f93a-04a3-5cec-9c37-a0657008888c.html
 
 [www.wdtn.com]
-match = -130.0%%
-title = FBI: California woman brought sword, whip and other ...
-url = https://www.wdtn.com/news/politics/ap-politics/ap-fbi-california-woman-brought-sword-whip-and-other-weapons-into-capitol-during-jan-6-riot/
+match = -135.0%%
+title = Could another insurrection happen in January? This film ...
+url = https://www.wdtn.com/news/politics/ap-politics/ap-could-another-insurrection-happen-in-january-this-film-imagines-what-if/
 
 [www.localsyr.com]
 match = -130.0%%
