--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-08-10 16:28:34
+lastsearch = 2024-08-10 17:19:16
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -187.5%%
-title = Loved meeting you guys!!! @Shab & Kassie 🥰🥰🥰🥰 We have ...
-url = https://www.tiktok.com/@hudabeauty/video/7381189370025364767
+match = -25.0%%
+title = Simple Xiangling Build
+url = https://www.tiktok.com/discover/simple-xiangling-build
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -107,9 +107,9 @@ title = Media markt jena verkaufsoffener sonntag [oCUsN6]
 url = https://www.nitrc.org/links/?group_id=51&url=https://6853247.xn--80aaxafbd2ainefn3d.xn--p1ai/9162345u6fe43a
 
 [www.amazon.com]
-match = -162.5%%
-title = Zury Natural Dream Feel & Look Ocean Wave 18" (SOM ...
-url = https://www.amazon.com/Zury-Natural-Dream-Feel-Ocean/dp/B07VMBWQ5P
+match = -187.5%%
+title = zury sis synthetic natural dream weave ocean wave 18-36 ...
+url = https://www.amazon.com/SYNTHETIC-NATURAL-DREAM-WEAVE-OCEAN/dp/B0812BC6NW
 
 [curlygurlluv.com]
 match = -68.8%%
@@ -142,9 +142,9 @@ title = Camping Tent
 url = https://www.roadtripamerica.com/forum/showthread.php?48059-Camping-Tent
 
 [kllibrary.dbkl.gov.my]
-match = -81.2%%
-title = Search Results for Chinese ficiton
-url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/results.displaypanel.bottomtoolbar.pagination.selectpage:handlepagingviasearchsession/3?qu=Chinese+ficiton&rw=600&ps=300&isd=true
+match = -68.8%%
+title = Search Results for Dreams -- Fiction
+url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/detailnonmodal.detail.mainpanel.fielddisplay.linktonewsearch?qu=Dreams+--+Fiction&ps=300
 
 [www.lemon8-app.com]
 match = -118.8%%
