--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-10 16:32:11
+lastsearch = 2024-08-10 17:19:35
 
 [everonvn.com.vn]
-match = -11.1%%
-title = Vỏ Gối Everon Guardian Giảm Giá
-url = https://everonvn.com.vn/everon/2269/vo-goi-everon-guardian
+match = -94.4%%
+title = Bộ Everon Ep 1738 - chăn ga gối đệm Everon
+url = https://everonvn.com.vn/everon/553/bo-everon-ep-1738
 
 [www.lazada.vn]
-match = -161.1%%
-title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+match = -133.3%%
+title = [FREESHIP MAX] Vỏ gối ôm satin cao cấp [Bear Bedding]
+url = https://www.lazada.vn/products/freeship-max-vo-goi-om-satin-cao-cap-bear-bedding-i2125036248.html
 
 [www.reddit.com]
 match = -150.0%%
