--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-10 18:27:30
+lastsearch = 2024-08-10 21:34:08
 
 [demxanh.com]
 match = 0.0%%
@@ -17,14 +17,14 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [shopee.vn]
-match = -37.0%%
-title = Chiếu mây điều hòa, làm từ sợi mây cao cấp, chiều nằm ...
-url = https://shopee.vn/Chiếu-mây-điều-hòa-làm-từ-sợi-mây-cao-cấp-chiều-nằm-mát-và-giá-rẻ-i.555764372.21208905703
+match = -3.7%%
+title = Chiếu Điều Hòa 2 Lớp Sợi Mây Tổng Hợp Cao Cấp ...
+url = https://shopee.vn/Chiếu-Điều-Hòa-2-Lớp-Sợi-Mây-Tổng-Hợp-Cao-Cấp-Chiếu-Điều-Hòa-Thông-Minh-đủ-size-i.22156385.7221150356
 
 [foreverbedding.net]
 match = -59.3%%
 title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi?srsltid=AfmBOoqc8NK5QqrTLkyuRVv_xfKW7P3__Ju8oW-3gylb-gsYv1x1Yf0x
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [congtynemthangloi.com]
 match = -29.6%%
