--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-10 20:05:18
+lastsearch = 2024-08-10 21:33:05
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -100.0%%
-title = Old man threw hands at HOA meeting : r/fuckHOA
-url = https://www.reddit.com/r/fuckHOA/comments/19743on/old_man_threw_hands_at_hoa_meeting/
+match = -200.0%%
+title = [Twitter] Man has house right next to HOA but is not part of ...
+url = https://www.reddit.com/r/fuckHOA/comments/1e2g82i/twitter_man_has_house_right_next_to_hoa_but_is/
 
 [www.quora.com]
 match = -200.0%%
@@ -354,7 +354,7 @@ url = https://www.elleman.vn/van-hoa-giai-tri/bo-anh-dep-van-hoa-dan-gian-nhat/a
 [books.google.com]
 match = -105.9%%
 title = The Monthly Army List - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+18&source=bl&ots=kbdohl9_eZ&sig=ACfU3U0KClg6G9wtUvwhhQRCkMYoqYMgkw&hl=en&sa=X&ved=2ahUKEwjslqXLvuqHAxXlMTQIHTAJDIgQ6AF6BAgZEAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+18&source=bl&ots=kbdoic40lV&sig=ACfU3U1Uu9mlVLq2EHbNOf54J20rArVV3w&hl=en&sa=X&ved=2ahUKEwi21bya0uqHAxVdElkFHQF_BQ8Q6AF6BAgmEAM
 
 [www.bankrate.com]
 match = 0.0%%
@@ -412,9 +412,9 @@ title =
 url = https://hhlawoffice.com/basics-of-colorado-homeowners-association-hoa-law/
 
 [www.justice.gov]
-match = -194.1%%
-title = Department of Justice | Homepage | United States Department ...
-url = https://www.justice.gov/
+match = -17.6%%
+title = joint_statement_ra.pdf
+url = https://www.justice.gov/sites/default/files/crt/legacy/2010/12/14/joint_statement_ra.pdf
 
 [www.nolo.com]
 match = 0.0%%
