--- a/images/man-khung/config.ini
+++ b/images/man-khung/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-khung.html
 lastopen = 2024-06-07 00:53:59
 
 [search]
-lastsearch = 2024-08-10 21:24:46
+lastsearch = 2024-08-10 21:34:27
 
 [mungmocmien.com]
 match = -88.9%%
@@ -12,9 +12,9 @@ title = Mùng khung inox gắn tường
 url = https://mungmocmien.com/collections/mung-khung-inox-gan-tuong-man-khung
 
 [easydream.vn]
-match = -255.6%%
-title = CÁC LOẠI MÀN KHUNG XẾP GỌN THÔNG MINH ĐẸP
-url = https://easydream.vn/man-khung-xep-gon-4-11.html
+match = -422.2%%
+title = Màn Khung Không Khoan Tường GIÁ RẺ CHẤT ... - easy dream
+url = https://easydream.vn/man-khung-dep-khong-khoan-tuong-thu-xep-gon-day-keo-rong-roc-mung-ngu-hien-dai-cac-loai-145-15.html
 
 [mankhung.com]
 match = -422.2%%
