--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-10 18:56:57
+lastsearch = 2024-08-10 22:30:34
 
 [demxanh.com]
 match = 26.1%%
 title = Chăn lông 3kg mã 02 - Hà Nội
-url = https://demxanh.com/chan-long-3kg-ma-02.html?srsltid=AfmBOoqXED9aZ2HUSe0Mabe1BLo7oNkhJ-NZF2YB_E4D2Zn1DL3GlwKK
+url = https://demxanh.com/chan-long-3kg-ma-02.html?srsltid=AfmBOorcWyI3_z56akefva4WTLoVY5hYAdduUE98_wQZ4HpJbQYiRiIX
 
 [shopee.vn]
 match = 43.5%%
@@ -19,12 +19,12 @@ url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 [www.diepxuan.com]
 match = 8.7%%
 title = Chăn KQ không sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOoo2km5k7HDGPKCuop38sR6U4L8ThGacZ5G_S6SjIQ_OfU0xeOKG
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOopdwAJRBTFozyItp34HzzmI_hNcW_3iMD2cwGAs2cqIlF0n_mym
 
 [thegioidemonline.com]
 match = 45.0%%
 title = Chăn lông KQ cao cấp
-url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOopV_Dj_sbrbcUyMkUJxYEegW4ZbNIzQWLsmf33SVYGN_T6rYARj
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOorKzWKzvBG92hYYQEMJo5gmWk_b3KOZj2rQUtieEPz0fqI8nTIs
 
 [www.youtube.com]
 match = -56.5%%
@@ -32,9 +32,9 @@ title = KHÁM PHÁ MÁY BAY MỚI NHẤT CỦA KHÔNG QUÂN NHÂN ...
 url = https://www.youtube.com/watch?v=zj_WP5hkru0
 
 [phongkhongkhongquan.vn]
-match = -82.6%%
-title = Tiểu đoàn Căn cứ Sân bay Nà Sản khắc phục khó khăn ...
-url = https://phongkhongkhongquan.vn/28375/tieu-doan-can-cu-san-bay-na-san-khac-phuc-kho-khan-tang-gia-chan-nuoi-tot.html
+match = -78.3%%
+title = Đại đội 5 thực hiện tốt công tác tăng gia, chăn nuôi
+url = https://phongkhongkhongquan.vn/27726/dai-doi-5-thuc-hien-tot-cong-tac-tang-gia-chan-nuoi.html
 
 [tamanhhospital.vn]
 match = -39.1%%
@@ -152,8 +152,8 @@ title = SUY TỦY XƯƠNG
 url = https://bthh.org.vn/74/suy-tuy-xuong-282.html
 
 [www.staleyfarmshomeskc.com]
-match = -104.3%%
-title = News Staley Farms Private Golf Community Kansas City MO
+match = -143.5%%
+title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--b1aktidr.xn--p1ai/54138796bzlqkz-modelscomk3fe43a
 
 [nhidong.org.vn]
